@startuml
class Main{
    + main(String[] args)
}
class OrderService{
    + boolean order(OrderEntity orderEntity)
}
class BaseValidateOrderProcessor{
    + boolean checkUserProcessor(OrderEntity orderEntity)
}
class TokenValidateProcess extends BaseValidateOrderProcessor {
    + boolean tokenValidate(String token)
}
class NumberOrderValidateProcess  extends BaseValidateOrderProcessor{
    + boolean numberOrderValidate(Integer numberOrder)
}

Main --> OrderService : 1: Gọi đến OrderService
OrderService --> BaseValidateOrderProcessor : 2: gọi đến TokenValidateProcess để validate token \n thông qua BaseValidateOrderProcessor
BaseValidateOrderProcessor --> TokenValidateProcess : 3: gọi đến TokenValidateProcess \n  để validate token
TokenValidateProcess --> BaseValidateOrderProcessor : 4: TokenValidateProcess yêu cầu base next \n  đến trình xử lý tiếp theo
BaseValidateOrderProcessor --> NumberOrderValidateProcess : 5: gọi đến NumberOrderValidateProcess \n  để validate number
NumberOrderValidateProcess --> BaseValidateOrderProcessor : 6: NumberOrderValidateProcess yêu cầu \n  base next đến trình xử lý tiếp theo
BaseValidateOrderProcessor --> OrderService : 7 BaseValidateOrderProcessor cố gắng gọi đến \n  trình xử lý tiếp theo nhưng không có để gọi. \n BaseValidateOrderProcessor trả về kết quả
OrderService --> Main : 8: trả lại kết quả cho Main

@enduml
